<resources>

    <!--app name-->
    <string name="app_name">MM Book Store</string>
    <string name="app_copyright">Copyright &#169; 2021 MM Book Store Developer \n All rights reserved</string>
    <string name="share_app">I Would like to share Android Ebook App this with you. Here You Can Download This app from Play Store</string>
    <string name="share_content">I\'ve shared a book from Android Ebook App</string>

    <!--bottom navigation-->
    <string name="title_nav_home">Home</string>
    <string name="title_nav_category">Category</string>
    <string name="title_nav_bookmark">Bookmark</string>

    <!--menu name-->
    <string name="menu_search">Search</string>
    <string name="menu_more">More</string>
    <string name="menu_overflow_settings">Settings</string>
    <string name="menu_overflow_rate_us">Rate us</string>
    <string name="menu_overflow_more_apps">More apps</string>
    <string name="menu_overflow_share">Share</string>
    <string name="menu_overflow_about">About</string>

    <!--network & error message-->
    <string name="whops">Whoops!</string>
    <string name="failed_title_text">Whoops!</string>
    <string name="failed_text">there is something problem with your network or the server is currently down, please try it again later.</string>
    <string name="no_post_found">Books not found! if you want to continue search, please try enter another keyword!</string>
    <string name="msg_no_item">it looks like there are no books available at this time.</string>
    <string name="msg_no_book">This book is currently unavailable, please try to find another book</string>
    <string name="msg_search_input">Please Insert Keyword</string>
    <string name="msg_no_favorite">Your bookmark is still empty because you haven\'t added it yet.</string>

    <!--bookmark-->
    <string name="bookmark_added">Added to bookmark</string>
    <string name="bookmark_removed">Removed from bookmark</string>

    <!--content-->
    <string name="go_to_page">Go to Page</string>
    <string name="input_page_number">Input Page Number</string>
    <string name="msg_input_page">Please input page number</string>
    <string name="msg_search_books">Search books&#8230;</string>

    <!--settings and others-->
    <string name="menu_settings">Settings</string>
    <string name="msg_clear_cache">Are you sure want to clear cache?</string>
    <string name="title_setting_theme">Dark Theme</string>
    <string name="sub_title_setting_theme">Better for eyesight &amp; battery life</string>
    <string name="title_setting_display_wallpaper">Display Books</string>
    <string name="option_menu_books_2_columns">2 Columns</string>
    <string name="option_menu_books_3_columns">3 Columns</string>
    <string name="title_setting_notification">Notification</string>
    <string name="sub_title_setting_notification">Subscribe to receive books update</string>
    <string name="title_setting_clear_cache">Clear Cache</string>
    <string name="sub_setting_clear_cache_start">Free up</string>
    <string name="sub_setting_clear_cache_end">of space</string>
    <string name="title_setting_privacy">Privacy Policy</string>
    <string name="sub_title_setting_privacy">App Terms &amp; Policies</string>
    <string name="title_setting_about">About</string>
    <string name="sub_title_setting_about">App info  &amp; build version</string>
    <string name="msg_about_version">Version</string>
    <string name="msg_please_wait">Please Wait&#8230;</string>
    <string name="msg_clearing_cache">Clearing cache</string>
    <string name="msg_cache_cleared">cache has been cleared</string>
    <string name="img_content_description">TODO</string>
    <string name="title_menu_browser">Open in Browser</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="btn_retry">Retry</string>
    <string name="option_ok">OK</string>
    <string name="option_yes">Yes</string>
    <string name="option_cancel">Cancel</string>

    // Check activity
    <string name="check_title_text">၁၂၃၄၅ ဟုရေးပြီး confirm ကိုနှိပ်ပါ</string>
    <string name="confirm">Confirm</string>
    <string name="please_enter">Please enter...</string>

</resources>